--- a/docs/src/components/about-astro.astro
+++ b/docs/src/components/about-astro.astro
@@ -9,7 +9,7 @@ const { title } = Astro.props;
 <article class="flex" aria-labelledby="about-astro-heading">
   <small id="about-astro-heading">
     {title}
-    <span class="sr-only">Astro</span>
+    <span class="sr-only">Sapiens IA</span>
   </small>
   <svg
     aria-hidden="true"
