--- a/docs/src/components/file-tree.astro
+++ b/docs/src/components/file-tree.astro
@@ -30,7 +30,7 @@ const processedContent = await fileTreeProcessor.process({
     font-size: var(--sl-text-xs);
     font-family: var(--__sb-font-mono);
     overflow-x: auto;
-    background-image: url('/path/to/image.jpg');
+    background-image: url('https://github.com/Vortextech01/starlight/blob/main/docs/src/assets/DAD03DE5-C565-4881-B4C6-523986884342.jpeg?raw=true');
     background-size: cover;
   }
 
