--- a/docs/src/assets/landing.css
+++ b/docs/src/assets/landing.css
@@ -1,27 +1,31 @@
 :root {
-  --purple-hsl: 255, 60%, 60%;
-  --overlay-blurple: hsla(var(--purple-hsl), 0.2);
+    --purple-hsl: 255, 60%, 60%;
+    --overlay-blurple: hsla(var(--purple-hsl), 0.2);
 }
 
 :root[data-theme='light'] {
-  --purple-hsl: 255, 85%, 65%;
+    --purple-hsl: 255, 85%, 65%;
 }
 
 [data-has-hero] .page {
-  background: linear-gradient(215deg, var(--overlay-blurple), transparent 40%),
-    radial-gradient(var(--overlay-blurple), transparent 40%) no-repeat -60vw -40vh /
-      105vw 200vh,
-    radial-gradient(var(--overlay-blurple), transparent 65%) no-repeat 50%
-      calc(100% + 20rem) / 60rem 30rem;
+    background-color: #f2f2f2;
+    background-image: url('./DAD03DE5-C565-4881-B4C6-523986884342.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    /* Light theme */
+    @media (prefers-color-scheme: light) {
+        background-image: url('./1A2B7EE7-7305-40D2-80DF-99C4CFC111B3.jpeg');
+    } 
 }
 
 [data-has-hero] header {
-  border-bottom: 1px solid transparent;
-  background-color: transparent;
-  -webkit-backdrop-filter: blur(16px);
-  backdrop-filter: blur(16px);
+    border-bottom: 1px solid transparent;
+    background-color: transparent;
+    -webkit-backdrop-filter: blur(16px);
+    backdrop-filter: blur(16px);
 }
 
 [data-has-hero] .hero > img {
-  filter: drop-shadow(0 0 3rem var(--overlay-blurple));
+    filter: drop-shadow(0 0 3rem var(--overlay-blurple));
 }
