--- a/docs/src/assets/landing.css
+++ b/docs/src/assets/landing.css
@@ -1,67 +1,36 @@
-/* Default Variable Values */
 :root {
   --purple-hsl: 255, 60%, 60%;
   --overlay-blurple: hsla(var(--purple-hsl), 0.2);
 }
 
-/* Dark Theme */
-:root[data-theme="dark"] {
-  --purple-hsl: 255, 90%, 45%;
-}
-
-/* Light Theme */
-:root[data-theme="light"] {
+:root[data-theme='light'] {
   --purple-hsl: 255, 85%, 65%;
+  --bg-image: url('./332AECC3-6ED6-4433-8806-48FCD2865977.jpeg');
 }
 
-/* Background Styles */
+:root[data-theme='dark'] {
+  --bg-image: url('./2C76575A-92FE-4131-898B-55513403945D.jpeg');
+}
+
+:root[data-theme='blue'] {
+  --bg-image: url('./332AECC3-6ED6-4433-8806-48FCD2865977.jpeg');
+}
+
 [data-has-hero] .page {
   background: linear-gradient(215deg, var(--overlay-blurple), transparent 40%),
-  radial-gradient(var(--overlay-blurple), transparent 40%) no-repeat -60vw -40vh /
-  105vw 200vh,
-  radial-gradient(var(--overlay-blurple), transparent 65%) no-repeat 50%
-  calc(100% + 20rem) / 60rem 30rem;
-
-  background-size: cover;
+    radial-gradient(var(--overlay-blurple), transparent 40%) no-repeat -60vw -40vh /
+      105vw 200vh,
+    radial-gradient(var(--overlay-blurple), transparent 65%) no-repeat 50%
+      calc(100% + 20rem) / 60rem 30rem, var(--bg-image);
 }
 
-/* Dark Theme Background Image */
-:root[data-theme="dark"] [data-has-hero] .page {
-  background-image: url("./2C76575A-92FE-4131-898B-55513403945D.jpeg");
-}
-
-/* Light Theme Background Image */
-:root[data-theme="light"] [data-has-hero] .page {
-  background-image: url("./332AECC3-6ED6-4433-8806-48FCD2865977.jpeg");
-}
-
-/* Header Styles */
 [data-has-hero] header {
   border-bottom: 1px solid transparent;
   background-color: transparent;
   -webkit-backdrop-filter: blur(16px);
   backdrop-filter: blur(16px);
-
 }
 
-/* Image Filter Effect */
 [data-has-hero] .hero > img {
   filter: drop-shadow(0 0 3rem var(--overlay-blurple));
 }
-
-/* Media Queries */
-
-@media (prefers-color-scheme: light) {
-  :root:not([data-theme="dark"]) [data-has-hero] .page {
-    background-image: url("./2C76575A-92FE-4131-898B-55513403945D.jpeg");
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  :root:not([data-theme="light"]) [data-has-hero] .page {
-    background-image: url("./332AECC3-6ED6-4433-8806-48FCD2865977.jpeg");
-  }
-}
-
-/* Rest of your CSS goes here */
-
