--- a/docs/src/assets/landing.css
+++ b/docs/src/assets/landing.css
@@ -21,7 +21,9 @@
     radial-gradient(var(--overlay-blurple), transparent 40%) no-repeat -60vw -40vh /
       105vw 200vh,
     radial-gradient(var(--overlay-blurple), transparent 65%) no-repeat 50%
-      calc(100% + 20rem) / 60rem 30rem, var(--bg-image);
+      calc(100% + 20rem) / 60rem 30rem,
+    url(var(--bg-image)) no-repeat center center fixed;
+  background-size: cover;
 }
 
 [data-has-hero] header {
